@@ -224,6 +224,12 @@
 		#define TMCG_OPENPGP_RADIX64_MC 64
 	#endif
 
+	#ifndef TMCG_OPENPGP_MAX_ALLOC
+		/* Define the maximum number of memory to allocate for OPENPGP packet
+		   context structures */
+		#define TMCG_OPENPGP_MAX_ALLOC 2147483648
+	#endif
+
 	// definition of some common types (TODO: implement by abstraction layer)
 	#include <vector>
 	#include <gmp.h>
