@@ -7,6 +7,7 @@ no Front-Cover Texts, and no Back-Cover Texts. A copy of the license is included
 in the sources of this package and additionally can be obtained from Internet
 <https://www.gnu.org/licenses>.
 
+* [2018-04-24] RFC4880: added limit TMCG_OPENPGP_MAX_ALLOC for memory allocation
 * [2018-04-22] RFC4880: added support for Camellia cipher (cf. RFC 5581)
 * [2018-04-22] added abstraction types tmcg_mpi_vector_t and tmcg_mpi_matrix_t
 * [2018-04-22] added abstraction types tmcg_mpz_vector_t and tmcg_mpz_matrix_t
